--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "react-error-boundary": "^3.1.4",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3"
